--- a/style.css
+++ b/style.css
@@ -1,34 +1,11 @@
-header {
-  text-align: center;
-  font-size: 30px;
-  color: #279EFF;
+/* CSS files add styling rules to your content */
+
+body {
+  font-family: helvetica, arial, sans-serif;
+  margin: 2em;
 }
 
-main, html {
-  margin: 0;
-  padding: 0;
-  height: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #0C356A;
-}
-
-.container {
-  text-align: center;
-  color: #279EFF;
-}
-
-.button {
-  padding: 10px 20px;
-  margin: 10px;
-  font-size: 24px;
-  border: none;
-  background-color: #3498db;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-.button:hover {
-  background-color: #2980b9;
+h1 {
+  font-style: italic;
+  color: #373fff;
 }
